--- a/utils/config.yml
+++ b/utils/config.yml
@@ -13,4 +13,4 @@ delete:
 data:
   # author:
   #   name: xiao_sl
-  #   link: https://github.com/xiao-cell
+  #   link: https://github.com/xiaosl-cell
